<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".EventDetailsFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp">


            <ImageView
                android:id="@+id/posterView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:src="@drawable/no_image_source"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@drawable/rounded_corners"
                android:clipToOutline="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="Poster" />

            <TextView
                android:id="@+id/event_detail_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="Placeholder"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:fontFamily="@font/lobster"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/posterView" />

            <View
                android:id="@+id/start_date_separator"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/event_detail_name" />

            <TextView
                android:id="@+id/event_detail_start_date"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:paddingStart="15dp"
                android:paddingTop="10dp"
                android:paddingEnd="16dp"
                android:paddingBottom="16dp"
                android:text="Start Date: "
                android:textColor="@color/white"
                android:textSize="17sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/start_date_separator" />

            <View
                android:id="@+id/end_date_separator"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/event_detail_start_date" />

            <TextView
                android:id="@+id/event_detail_end_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:paddingTop="10dp"
                android:paddingEnd="16dp"
                android:paddingBottom="16dp"
                android:text="End Date: "
                android:textColor="@color/white"
                android:textSize="17sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/event_detail_start_date" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/event_detail_end_date" />

            <TextView
                android:id="@+id/event_detail_location"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:paddingTop="10dp"
                android:paddingEnd="16dp"
                android:paddingBottom="16dp"
                android:text="Location: "
                android:textColor="@color/white"
                android:textSize="17sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/event_detail_end_date" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/event_detail_location" />

            <TextView
                android:id="@+id/event_detail_organizer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:paddingTop="10dp"
                android:paddingEnd="16dp"
                android:paddingBottom="16dp"
                android:text="Organized by: "
                android:textColor="@color/white"
                android:textSize="17sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/event_detail_location" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/event_detail_organizer" />

            <TextView
                android:id="@+id/event_detail_details"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:paddingTop="10dp"
                android:paddingEnd="16dp"
                android:paddingBottom="16dp"
                android:text="Details: "
                android:textColor="@color/white"
                android:textSize="17sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/event_detail_organizer" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/view_announcements_button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="Announcements"
                android:textColor="@color/white"
                app:backgroundTint="@color/purple_500"
                app:layout_constraintEnd_toStartOf="@id/attendee_list_button"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/event_detail_details"
                app:layout_constraintWidth_percent="0.45" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/attendee_list_button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="Attendees"
                android:textColor="@color/white"
                app:backgroundTint="@color/purple_500"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/view_announcements_button"
                app:layout_constraintTop_toBottomOf="@+id/event_detail_details"
                app:layout_constraintWidth_percent="0.45"
                android:visibility="gone"/>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/sign_up_button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="Sign Up"
                android:textColor="@color/white"
                android:visibility="gone"
                app:backgroundTint="@color/green2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.487"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view_announcements_button"
                app:layout_constraintWidth_percent="0.9" />


            <TextView
                android:id="@+id/promo_qr_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:text="Invite your friends:"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.505"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sign_up_button" />

            <ImageView
                android:id="@+id/promo_qr_view"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/no_image_source"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/promo_qr_text" />

            <Button
                android:id="@+id/promo_share_button"
                android:layout_width="37dp"
                android:layout_height="35dp"

                android:layout_marginTop="44dp"
                android:background="@drawable/share_symbol"
                app:layout_constraintHorizontal_bias="0.47"
                app:layout_constraintLeft_toRightOf="@id/promo_qr_view"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/promo_qr_text" />

            <TextView
                android:id="@+id/check_in_qr_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="Scan to Check-In:"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.425"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/promo_qr_view" />

            <ImageView
                android:id="@+id/check_in_qr_view"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/no_image_source"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/check_in_qr_text"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/check_in_share_button"
                android:layout_width="37dp"
                android:layout_height="35dp"
                android:background="@drawable/share_symbol"
                app:layout_constraintLeft_toRightOf="@id/check_in_qr_view"
                app:layout_constraintRight_toRightOf="parent"

                app:layout_constraintTop_toBottomOf="@id/check_in_qr_text" />



            <Button
                android:id="@+id/button_geolocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="View Attendee Locations"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/attendee_list_button"
                android:visibility="gone"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/back_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:srcCompat="@drawable/icons8_back_button"
        app:tint="@color/white"
        app:backgroundTint="@android:color/transparent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>